--- a/覚えること.html
+++ b/覚えること.html
@@ -17,6 +17,12 @@
         <h4>わかりやすいプログラムを書く３つのポイント</h4>
         <ol>
             <li><font color="red">コメント</font>:プログラム内のメモ書き</li>
+                <p>//コメント:1行のコメント</p>
+                <p>/*コメント*/:複数行のコメント</p>
+            <li><font color="red">フォーマット</font>:プログラムの体裁</li>
+                <p>ブロックの開始・終了や処理文ごとに<font color="red">改行</font>する</p>
+                <p>タブや半角スペースで<font color="red">字下げ</font>(インデント)する</p>
+            <li><font color="red">命名ルール</font>:名付けの習慣</li>
         </ol>
             
     </body>
