--- a/覚えること.html
+++ b/覚えること.html
@@ -23,6 +23,9 @@
                 <p>ブロックの開始・終了や処理文ごとに<font color="red">改行</font>する</p>
                 <p>タブや半角スペースで<font color="red">字下げ</font>(インデント)する</p>
             <li><font color="red">命名ルール</font>:名付けの習慣</li>
+                <p>１文字目のクラス・インタフェースは<font color="red">大文字</font></p>
+                <p>１文字目の変数・メソッド・パッケージは<font color="red">小文字</font></p>
+                <p>2つ目以降の単語は<font color="red">大文字</font></p>
         </ol>
             
     </body>
