--- a/覚えること.html
+++ b/覚えること.html
@@ -27,6 +27,99 @@
                 <p>１文字目の変数・メソッド・パッケージは<font color="red">小文字</font></p>
                 <p>2つ目以降の単語は<font color="red">大文字</font></p>
         </ol>
-            
+        <h4>変数</h4>
+            <p>変数はデータの<font color="red">入れ物</font></p>
+            <div class="rule">変数名のルール</div>
+                <p>１文字目:英数字(a~z,A~Z),_,$</p>
+                <p>2文字目以降は数字も可</p>
+                <p>キーワード(Javaのプログラムの中で特別な意味を持つもの)は使えない<br>
+                    <table border="1">
+                        <tr>
+                            <th colspan="6">名前</th>
+                        </tr>
+                        <tr>
+                            <td class="a" colspan="3">abstract</td>
+                            <td class="a" colspan="3">assert</td>
+                        </tr>
+                        <tr>
+                            <td colspan="2">boolean</td>
+                            <td colspan="2">break</td>
+                            <td colspan="2">byte</td>
+                        </tr>
+                        <tr>
+                            <td>case</td>
+                            <td>catch</td>
+                            <td>char</td>
+                            <td>class</td>
+                            <td>const</td>
+                            <td>continue</td>
+                        </tr>
+                        <tr>
+                            <td colspan="2">default</td>
+                            <td colspan="2">do</td>
+                            <td colspan="2">double</td>
+                        </tr>
+                        <tr>
+                            <td class="e" colspan="3">else</td>
+                            <td class="e" colspan="3">extends</td>
+                        </tr>
+                        <tr>
+                            <td>final</td>
+                            <td>finally	</td>
+                            <td colspan="2">float</td>	
+                            <td colspan="2">for</td>
+                        </tr>
+                        <tr>
+                            <td class="g" colspan="6" >goto</td>
+                        </tr>
+                        <tr>
+                            <td>if</td>
+                            <td>implements</td>
+                            <td>import</td>
+                            <td>instanceof</td>
+                            <td>int</td>
+                            <td>interface</td>
+                        </tr>
+                        <tr>
+                            <td class="l" colspan="6">long</td>
+                        </tr>
+                        <tr>
+                            <td class="n" colspan="3">native</td>
+                            <td class="n"colspan="3">new</td>
+                        </tr>
+                        <tr>
+                            <td class="r" colspan="6">return</td>
+                        </tr>
+                        <tr>
+                            <td>package</td>
+                            <td>private</td>
+                            <td colspan="2">protected</td>
+                            <td colspan="2">public</td>
+                        </tr>
+                        <tr>
+                            <td>short</td>
+                            <td>static</td>
+                            <td>statictfp</td>
+                            <td>super</td>
+                            <td>switch</td>
+                            <td>synchronized</td>
+                        </tr>
+                        <tr>
+                            <td>this</td>
+                            <td>throw</td>
+                            <td>throws</td>
+                            <td>transient</td>
+                            <td colspan="2">try</td>
+                        </tr>
+                        <tr>
+                            <td class="v" colspan="3">void</td>
+                            <td class="v" colspan="3">volatile</td>
+                        </tr>
+                        <tr>
+                            <td class="w" colspan="6">while</td>
+                        </tr>
+
+                    </table>                
+                </p>
     </body>
 </html>
