--- a/覚えること.html
+++ b/覚えること.html
@@ -32,7 +32,7 @@
             <div class="rule">変数名のルール</div>
                 <p>１文字目:英数字(a~z,A~Z),_,$</p>
                 <p>2文字目以降は数字も可</p>
-                <p>キーワード(Javaのプログラムの中で特別な意味を持つもの)は使えない<br>
+                <p>キーワード(Javaのプログラムの中で特別な意味を持つもの)は使えない</p>
                     <table border="1">
                         <tr>
                             <th colspan="6">名前</th>
@@ -118,8 +118,18 @@
                         <tr>
                             <td class="w" colspan="6">while</td>
                         </tr>
-
                     </table>                
-                </p>
+        <h4>変数の使い方</h4>  
+            <ol>
+                <li><font color="red">宣言</font>する:変数を作る</li>
+                    <p>データ型 変数名,変数名,・・・;</p>
+                    <p>int month,day;</p>
+                <li><font color="red">代入</font>する:値を入れる</li>
+                    <p>変数名 = 値;</p>
+                    <p>age= 20;</p>
+                <li><font color="red">参照</font>する:値を見る</li>
+                <li>&#9312;+&#9313; <font color="red">初期化</font>する</li>
+                    <p>int age= 20;</p>
+            </ol>
     </body>
 </html>
