--- a/覚えること.html
+++ b/覚えること.html
@@ -33,13 +33,13 @@
                 <p>１文字目:英数字(a~z,A~Z),_,$</p>
                 <p>2文字目以降は数字も可</p>
                 <p>キーワード(Javaのプログラムの中で特別な意味を持つもの)は使えない</p>
-                    <table border="1">
+                    <table class="center" border="1">
                         <tr>
                             <th colspan="6">名前</th>
                         </tr>
                         <tr>
-                            <td class="a" colspan="3">abstract</td>
-                            <td class="a" colspan="3">assert</td>
+                            <td  colspan="3">abstract</td>
+                            <td  colspan="3">assert</td>
                         </tr>
                         <tr>
                             <td colspan="2">boolean</td>
@@ -56,12 +56,12 @@
                         </tr>
                         <tr>
                             <td colspan="2">default</td>
-                            <td colspan="2">do</td>
+                            <td colspan="2" >do</td>
                             <td colspan="2">double</td>
                         </tr>
                         <tr>
-                            <td class="e" colspan="3">else</td>
-                            <td class="e" colspan="3">extends</td>
+                            <td colspan="3">else</td>
+                            <td colspan="3">extends</td>
                         </tr>
                         <tr>
                             <td>final</td>
@@ -70,7 +70,7 @@
                             <td colspan="2">for</td>
                         </tr>
                         <tr>
-                            <td class="g" colspan="6" >goto</td>
+                            <td colspan="6" >goto</td>
                         </tr>
                         <tr>
                             <td>if</td>
@@ -81,14 +81,14 @@
                             <td>interface</td>
                         </tr>
                         <tr>
-                            <td class="l" colspan="6">long</td>
+                            <td colspan="6">long</td>
                         </tr>
                         <tr>
-                            <td class="n" colspan="3">native</td>
-                            <td class="n"colspan="3">new</td>
+                            <td colspan="3">native</td>
+                            <td colspan="3">new</td>
                         </tr>
                         <tr>
-                            <td class="r" colspan="6">return</td>
+                            <td colspan="6">return</td>
                         </tr>
                         <tr>
                             <td>package</td>
@@ -112,11 +112,11 @@
                             <td colspan="2">try</td>
                         </tr>
                         <tr>
-                            <td class="v" colspan="3">void</td>
-                            <td class="v" colspan="3">volatile</td>
+                            <td colspan="3">void</td>
+                            <td colspan="3">volatile</td>
                         </tr>
                         <tr>
-                            <td class="w" colspan="6">while</td>
+                            <td colspan="6">while</td>
                         </tr>
                     </table>                
         <h4>変数の使い方</h4>  
