--- a/よくあるエラー.html
+++ b/よくあるエラー.html
@@ -11,4 +11,5 @@
             <li>Exception(例外)in thread "main"(mainメソッドの中で) java.lang.Array(配列)Index(要素の番号)OutOfBounds(領域外)Exception: Index 1 out of bounds for length 1
                 at CmdLine.main(CmdLine.java:4)</li>
                 <p>配列の長さ(要素)が１しかないのに添字1で配列の範囲外をアクセスしているのでデータがありませんという例外が起きてしまった。</p>
-            <li></li>
+            <li>identifierがありません。</li>
+                <p>識別子(識別できる記号やワード)がありません。</p>
