fin_1時間47分_youtube

--- a/よくあるエラー.html
+++ b/よくあるエラー.html
@@ -13,3 +13,5 @@
                 <p>配列の長さ(要素)が１しかないのに添字1で配列の範囲外をアクセスしているのでデータがありませんという例外が起きてしまった。</p>
             <li>identifierがありません。</li>
                 <p>識別子(識別できる記号やワード)がありません。</p>
+            <li>NumberFormatException</li>
+                <p>数字の形式になっていないエラー</p>
