--- a/構造化プログラミング&if文.html
+++ b/構造化プログラミング&if文.html
@@ -27,5 +27,15 @@
                 <li>どちらかの処理しか実行されない</li>
                 <li>else以降は省略可</li>
                 <li>処理が一つのときは{}を省略可</li>
+        <h4>else-if文の書き方</h4>
+            <p>if(条件式1){</p>
+            <p>処理１</p>
+            <p>}elseif(条件式2){</p>
+            <p>処理２</p>
+            <p>}else{</p>
+            <p>処理3</p>
+            <p>}</p>
+        <div class="circle">ポイント</div>
+            <li>条件式は上から順に判定</li>
     </body>
 </html>
