fin_all_Java入門講座総集編_youtube

--- a/よくあるエラー.html
+++ b/よくあるエラー.html
@@ -15,3 +15,5 @@
                 <p>識別子(識別できる記号やワード)がありません。</p>
             <li>NumberFormatException</li>
                 <p>数字の形式になっていないエラー</p>
+            <li>シンボルを見つけられません</li>
+                <p>記号が何かわかりません</p>
